--- a/src/less/partials/front/main.less
+++ b/src/less/partials/front/main.less
@@ -5,6 +5,16 @@
 // add Colors white
 @white:     #fff;
 
+// Can delete this
+a {
+    &.fork-me {
+        z-index: 100;
+        position: absolute;
+        top: 50px;
+        left: 0;
+    }
+}
+// Position content top
 section {
     margin-top: 70px;
 }
