--- a/src/less/partials/front/main.less
+++ b/src/less/partials/front/main.less
@@ -18,3 +18,19 @@ a {
 section {
     margin-top: 70px;
 }
+
+//
+// Responsive
+// --------------------------------------------------
+// Tablet paysage
+@media  (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+
+}
+// Tablet portrait
+@media  (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+
+}
+// Mobile
+@media (max-width: @screen-xs-max) {
+
+}
